# $Id$

2009-02-26	Vladlen Y. Koshelev

	* core/DB/PostgresError.class.php, test/code/PostgresErrorTest.class.php:
	added conversion methods for internal numeric representation of error code
	(toCode(), getByCode(), checkCode()) and corresponding test.
	Thanks to Ivan Y. Khvostishkov.

	* core/DB/PgSQL.class.php: pass numeric error code value to
	DatabaseException.

2009-02-22	Konstantin V. Arkhipov

	* core/Form/Primitives/IdentifiablePrimitive.class.php: added
	setScalar() to control wheter identifier is really scalar one, this
	change restores old class' behavior.

	* core/Form/Primitives/PrimitiveIntegerIdentifier.class.php,
	core/Form/Primitives/PrimitiveScalarIdentifier.class.php: two
	identifier types introduced for forward compatibility with master.

2009-02-20	Denis M. Gabaidulin

	* main/Math/MathUtils.class.php: randFloat() added.

2009-02-19	Ivan Y. Khvostishkov

	* core/Cache/Cache.class.php: appendDaoMap() - better than replace.

2009-02-18	Viatcheslav Y. Tsyrulnik

	* main/Net/Http/CurlHttpClient.class.php: support for HTTP methods
	other than get/post and additional headers.

2009-02-18	Denis M. Gabaidulin

	* main/Criteria/ProjectionChain.class.php: dropByType() added.
	Drop projection by type from Criteria.

2009-02-16	Ivan Y. Khvostishkov

	* main/Flow/RedirectView.class.php: ability to build complex array
	values upon redirect (involving PrimitiveDateRange, for example).

2009-02-13	Ivan Y. Khvostishkov

	* main/Flow/CleanRedirectView.class.php: parent class for RedirectView,
	clean redirect without model.

2009-02-13	Evgeniy N. Sokolov

	* main/Utils/TextUtils.class.php: friendlyNumber() now works with float
	and negative numbers.

2009-02-13	Ivan Y. Khvostishkov

	* main/Utils/TuringTest/Color.class.php: flyweight pattern implemented.

2009-02-10	Vladlen Y. Koshelev

	* main/Flow/MultiPrefixPhpViewResolver.class.php: makeView() hook and
	isPrefixDisabled() added.

2009-02-06	Denis M. Gabaidulin
