@@ -1,5 +1,9 @@
 # $Id$
 
+2009-03-05	Vladlen Y. Koshelev
+
+	* main/Flow/BaseEditor.class.php: ability to change default action added.
+
 2009-02-26	Vladlen Y. Koshelev
 
 	* core/DB/PostgresError.class.php, test/code/PostgresErrorTest.class.php:
